# Ai_Drawing

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
configs/: data.yaml  data_curriculum_stage1.yaml  data_svg_corpus.yaml  im2svg_data.yaml  im2svg_data_50k.yaml  im2svg_data_curriculum_stage1.yaml  infer.yaml  infer_im2svg_curriculum_stage1_tiny.yaml  infer_im2svg_prefix16_15k.yaml  infer_im2svg_prefix16_30k.yaml  infer_im2svg_prefix16_medium_30k.yaml  infer_im2svg_prefix16_midplus_40k.yaml  infer_im2svg_prefix16_svgprior_10k.yaml  infer_im2svg_prefix16_svgprior_50k.yaml  model.yaml  model_im2svg_curriculum_tiny.yaml  model_im2svg_prefix16.yaml  model_im2svg_prefix16_medium.yaml  model_im2svg_prefix16_midplus.yaml  train.yaml  train_im2svg_curriculum_stage1_tiny.yaml  train_im2svg_prefix16_15k.yaml  train_im2svg_prefix16_30k.yaml  train_im2svg_prefix16_medium_30k.yaml  train_im2svg_prefix16_midplus_40k.yaml  train_im2svg_prefix16_svgprior_10k.yaml  train_im2svg_prefix16_svgprior_50k.yaml  train_im2svg_small_local.yaml
scripts/: 00_scan_dataset.py  01_normalize_svgs.py  02_build_index.py  03_rasterize_preview.py  04_make_im2svg_pairs.py  05_build_im2svg_splits.py  06_generate_curriculum_stage1_assets.py  convert_to_safetensors.py  export.py  hybrid_vectorize.py  hybrid_vectorize_v2.py  im2svg_logit_debug.py  im2svg_sanity_check.py  infer.py  push_to_hf.py  serve_api.py  train.py
yd_vector/: __init__.py  paths.py
yd_vector/api/: app.py  hybrid_service.py  service.py
yd_vector/data/: __init__.py  augmentations.py  collate.py  dataset.py  im2svg_collate.py  (+6 more)
(+62 files in other folders)
